force-app/main/default/objects/Account/fields/Account_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_External_ID__c</fullName>
    <description>Text field to house External ID for the Account, coming in from AGBOSS.</description>
    <externalId>true</externalId>
    <label>Account External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>