force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Pricing Confirmation</fullName>
            </value>
            <value>
                <fullName>Pricing Creation</fullName>
            </value>
            <value>
                <fullName>Preferences Collection</fullName>
            </value>
            <value>
                <fullName>Credit Declined</fullName>
            </value>
            <value>
                <fullName>Storefront Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>