force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Picklist field to indicate whether the Account is a Broker or Grower, coming in from AGBOSS.</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Grower</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>