force-app/main/default/objects/Account/fields/AccountCreditStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountCreditStatus__c</fullName>
    <description>Hidden text field. Use to pull the Account credit status onto the Account through Flow:
Used for audiences on the Storefront.</description>
    <label>AccountCreditStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>