force-app/main/default/objects/Account/fields/Accounts_Access__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Access__c</fullName>
    <description>Used in &apos;Manildra Payment and Billing Address&apos; Flow. Determines if they can use Purchase Order as a way to pay through their Term Code.</description>
    <formula>OR(
    ISPICKVAL(Terms_Code__c,&quot;02&quot;),
    ISPICKVAL(Terms_Code__c,&quot;03&quot;),
    ISPICKVAL(Terms_Code__c,&quot;06&quot;),
    ISPICKVAL(Terms_Code__c,&quot;14&quot;),
    ISPICKVAL(Terms_Code__c,&quot;16&quot;),
    ISPICKVAL(Terms_Code__c,&quot;F3&quot;),
    ISPICKVAL(Terms_Code__c,&quot;S3&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounts Access</label>
    <type>Checkbox</type>
</CustomField>