force-app/main/default/objects/Account/fields/Additional_Delivery_Track_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Additional_Delivery_Track_Email_Address__c</fullName>
    <inlineHelpText>The email address in the cc field for DeTrack delivery notices.</inlineHelpText>
    <label>Additional Delivery Track Email Address</label>
    <type>Email</type>
</CustomField>