force-app/main/default/objects/Account/fields/Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone__c</fullName>
    <description>Frequently mobile number, or sometimes a second number in full</description>
    <inlineHelpText>Frequently mobile number, or sometimes a second number in full</inlineHelpText>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>