force-app/main/default/objects/Account/fields/AS400_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>AS400_Last_Modified__c</fullName>
    <description>The last date and time any customer record is modified in AS400</description>
    <inlineHelpText>The last date and time any customer record is modified in AS400</inlineHelpText>
    <label>AS400 Last Modified</label>
    <type>DateTime</type>
</CustomField>