force-app/main/default/objects/Account/fields/CallDay__c.field-meta.xml
<CustomField>
    <fullName>CallDay__c</fullName>
    <formula>CASE( MOD( TODAY() - DATE( 1900, 1, 7 ), 7 ), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, &quot;Saturday&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Day</label>
    <type>Text</type>
</CustomField>