force-app/main/default/objects/Account/fields/Charges_This_Period__c.field-meta.xml
<CustomField>
    <fullName>Charges_This_Period__c</fullName>
    <inlineHelpText>The account balance that has accrued this financial month.</inlineHelpText>
    <label>Charges This Period</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>