force-app/main/default/objects/Account/fields/Confirmation_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Contact_Name__c</fullName>
    <description>the contact name for order confirmations</description>
    <inlineHelpText>the contact name for order confirmations</inlineHelpText>
    <label>Confirmation Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>