force-app/main/default/objects/Account/fields/Confirmation_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Address__c</fullName>
    <description>the email address order confirmations are sent</description>
    <inlineHelpText>the email address order confirmations are sent</inlineHelpText>
    <label>Confirmation Email Address</label>
    <type>Email</type>
</CustomField>