force-app/main/default/objects/Account/fields/Confirmation_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_CC__c</fullName>
    <description>the email address in the cc field that order confirmations are sent</description>
    <inlineHelpText>the email address in the cc field that order confirmations are sent</inlineHelpText>
    <label>Confirmation Email CC</label>
    <type>Email</type>
</CustomField>