force-app/main/default/objects/Account/fields/Confirmation_Emails__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Emails__c</fullName>
    <inlineHelpText>Yes/No if confirmation emails are sent.</inlineHelpText>
    <label>Confirmation Emails?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_no</valueSetName>
    </valueSet>
</CustomField>