force-app/main/default/objects/Account/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <inlineHelpText>RET = retail; SUP = superior account</inlineHelpText>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RET</fullName>
            </value>
            <value>
                <fullName>SUP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>