force-app/main/default/objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <description>Reference to Customer Group Name</description>
    <label>Customer Group</label>
    <length>3</length>
    <type>Text</type>
</CustomField>