force-app/main/default/objects/Account/fields/Customer_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Code__c</fullName>
    <label>Customer Group Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALD</fullName>
            </value>
            <value>
                <fullName>ARN</fullName>
            </value>
            <value>
                <fullName>BID</fullName>
            </value>
            <value>
                <fullName>BOR</fullName>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>CHH</fullName>
            </value>
            <value>
                <fullName>COS</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>CTX</fullName>
            </value>
            <value>
                <fullName>CUB</fullName>
            </value>
            <value>
                <fullName>CW</fullName>
            </value>
            <value>
                <fullName>DON</fullName>
            </value>
            <value>
                <fullName>GF</fullName>
            </value>
            <value>
                <fullName>GGF</fullName>
            </value>
            <value>
                <fullName>GH</fullName>
            </value>
            <value>
                <fullName>GWF</fullName>
            </value>
            <value>
                <fullName>HAL</fullName>
            </value>
            <value>
                <fullName>JST</fullName>
            </value>
            <value>
                <fullName>KCA</fullName>
            </value>
            <value>
                <fullName>KEL</fullName>
            </value>
            <value>
                <fullName>KER</fullName>
            </value>
            <value>
                <fullName>KF</fullName>
            </value>
            <value>
                <fullName>KK</fullName>
            </value>
            <value>
                <fullName>KNF</fullName>
            </value>
            <value>
                <fullName>LIB</fullName>
            </value>
            <value>
                <fullName>MET</fullName>
            </value>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>MOB</fullName>
            </value>
            <value>
                <fullName>NES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>