force-app/main/default/objects/Account/fields/Customer_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Name__c</fullName>
    <label>Customer Group Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>