force-app/main/default/objects/Account/fields/Customer_s_Manildra_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Manildra_Reference__c</fullName>
    <inlineHelpText>The reference the customer users to refer to Manildra as a supplier.</inlineHelpText>
    <label>Customer&apos;s Manildra Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>