force-app/main/default/objects/Account/fields/Cut_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>Cut_Off_Time__c</fullName>
    <description>Used for Default Order Creation batch process</description>
    <label>Cut Off Time</label>
    <type>Time</type>
</CustomField>