force-app/main/default/objects/Account/fields/Default_Order_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Default_Order_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attribute used to create default order by batch process</description>
    <label>Default Order Enabled</label>
    <type>Checkbox</type>
</CustomField>