force-app/main/default/objects/Account/fields/Default_Warehouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Warehouse_Name__c</fullName>
    <label>Default Warehouse Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>360 Logistics VIC</fullName>
            </value>
            <value>
                <fullName>ACB - VIC</fullName>
            </value>
            <value>
                <fullName>AGS Deniliquin</fullName>
            </value>
            <value>
                <fullName>Allied Kingsgrove</fullName>
            </value>
            <value>
                <fullName>Altona Plant VIC</fullName>
            </value>
            <value>
                <fullName>Alton Grieve Parade WH</fullName>
            </value>
            <value>
                <fullName>Aluminates Orica VIC</fullName>
            </value>
            <value>
                <fullName>Amcor Consignment NSW</fullName>
            </value>
            <value>
                <fullName>APCS Ingleburn NSW</fullName>
            </value>
            <value>
                <fullName>Argyle Nowra</fullName>
            </value>
            <value>
                <fullName>Auburn - Pasta Finished Goods</fullName>
            </value>
            <value>
                <fullName>Auburn Warehouse NSW</fullName>
            </value>
            <value>
                <fullName>Aust Blending Company Pty Ltd</fullName>
            </value>
            <value>
                <fullName>Aware Dandenong South</fullName>
            </value>
            <value>
                <fullName>Border Solutions</fullName>
            </value>
            <value>
                <fullName>Brand Cartel Pty Ltd</fullName>
            </value>
            <value>
                <fullName>Burkes Transport Bathrust NSW</fullName>
            </value>
            <value>
                <fullName>Cairns QLD-Cairns Best Freight</fullName>
            </value>
            <value>
                <fullName>Caltex Aust Petroleum P/L</fullName>
            </value>
            <value>
                <fullName>Canowindra Storage NSW</fullName>
            </value>
            <value>
                <fullName>Chapman Logistics VIC</fullName>
            </value>
            <value>
                <fullName>Choice Premixes Pty Ltd</fullName>
            </value>
            <value>
                <fullName>Clyde - Sunshine Sugar NSW</fullName>
            </value>
            <value>
                <fullName>Cochranes (S.A. Pasta)</fullName>
            </value>
            <value>
                <fullName>Cochranes S.A</fullName>
            </value>
            <value>
                <fullName>Coffs Harbour NSW</fullName>
            </value>
            <value>
                <fullName>Crawfords Freightlines</fullName>
            </value>
            <value>
                <fullName>Default Price Warehouse</fullName>
            </value>
            <value>
                <fullName>Douglas Transport Pty Ltd</fullName>
            </value>
            <value>
                <fullName>Durablend Pty Ltd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>