force-app/main/default/objects/Account/fields/Default_Warehouse_Number__c.field-meta.xml
<CustomField>
    <fullName>Default_Warehouse_Number__c</fullName>
    <inlineHelpText>the default warehouse for goods to be shipped from.</inlineHelpText>
    <label>Default Warehouse Number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Default_Warehouse_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>011</fullName>
            </value>
            <value>
                <fullName>012</fullName>
            </value>
            <value>
                <fullName>013</fullName>
            </value>
            <value>
                <fullName>014</fullName>
            </value>
            <value>
                <fullName>015</fullName>
            </value>
            <value>
                <fullName>016</fullName>
            </value>
            <value>
                <fullName>017</fullName>
            </value>
            <value>
                <fullName>018</fullName>
            </value>
            <value>
                <fullName>019</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>020</fullName>
            </value>
            <value>
                <fullName>021</fullName>
            </value>
            <value>
                <fullName>022</fullName>
            </value>
            <value>
                <fullName>023</fullName>
            </value>
            <value>
                <fullName>024</fullName>
            </value>
            <value>
                <fullName>025</fullName>
            </value>
            <value>
                <fullName>026</fullName>
            </value>
            <value>
                <fullName>027</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>030</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>08P</fullName>
            </value>
            <value>
                <fullName>08R</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>