force-app/main/default/objects/Account/fields/Delivery_Dates__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Dates__c</fullName>
    <label>Delivery Dates</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Dates</valueSetName>
    </valueSet>
</CustomField>