force-app/main/default/objects/Account/fields/Delivery_Track_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Track_Email_Address__c</fullName>
    <inlineHelpText>The email address DeTrack delivery notices are sent by email.</inlineHelpText>
    <label>Delivery Track Email Address</label>
    <type>Email</type>
</CustomField>