force-app/main/default/objects/Account/fields/Delivery_Track_SMS__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Track_SMS__c</fullName>
    <inlineHelpText>Yes/No if DeTrack delivery notices are sent by SMS.</inlineHelpText>
    <label>Delivery Track SMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_no</valueSetName>
    </valueSet>
</CustomField>