force-app/main/default/objects/Account/fields/Delivery_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Window_End__c</fullName>
    <inlineHelpText>The latest time a delivery can be made for the customer.</inlineHelpText>
    <label>Delivery Window End</label>
    <type>Time</type>
</CustomField>