force-app/main/default/objects/Account/fields/Delivery_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Window_Start__c</fullName>
    <inlineHelpText>The earliest time a delivery can be made for the customer.</inlineHelpText>
    <label>Delivery Window Start</label>
    <type>Time</type>
</CustomField>