force-app/main/default/objects/Account/fields/DeTrack_SMS_Update_Number_1__c.field-meta.xml
<CustomField>
    <fullName>DeTrack_SMS_Update_Number_1__c</fullName>
    <inlineHelpText>The fist mobile number used for DeTrack delivery notices SMS.</inlineHelpText>
    <label>DeTrack SMS Update Number 1</label>
    <type>Phone</type>
</CustomField>