force-app/main/default/objects/Account/fields/DeTrack_SMS_Update_Number_2__c.field-meta.xml
<CustomField>
    <fullName>DeTrack_SMS_Update_Number_2__c</fullName>
    <inlineHelpText>The second mobile number used for DeTrack delivery notices SMS.</inlineHelpText>
    <label>DeTrack SMS Update Number 2</label>
    <type>Phone</type>
</CustomField>