force-app/main/default/objects/Account/fields/Docket_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Docket_Contact_Name__c</fullName>
    <description>contact name for delivery dockets</description>
    <inlineHelpText>contact name for delivery dockets</inlineHelpText>
    <label>Docket Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>