force-app/main/default/objects/Account/fields/Docket_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Docket_Email_Address__c</fullName>
    <description>the email address dockets are sent to</description>
    <inlineHelpText>the email address dockets are sent to</inlineHelpText>
    <label>Docket Email Address</label>
    <type>Email</type>
</CustomField>