force-app/main/default/objects/Account/fields/Docket_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>Docket_Email_CC__c</fullName>
    <description>the email address in the cc field that dockets are sent to</description>
    <inlineHelpText>the email address in the cc field that dockets are sent to</inlineHelpText>
    <label>Docket Email CC</label>
    <type>Email</type>
</CustomField>