force-app/main/default/objects/Account/fields/Docket_Emails__c.field-meta.xml
<CustomField>
    <fullName>Docket_Emails__c</fullName>
    <inlineHelpText>Yes/No if delivery dockets are emailed</inlineHelpText>
    <label>Docket Emails?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_no</valueSetName>
    </valueSet>
</CustomField>