force-app/main/default/objects/Account/fields/Group_Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Group_Customer_Reference__c</fullName>
    <inlineHelpText>The number used by the customer group head office.</inlineHelpText>
    <label>Group Customer Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>