force-app/main/default/objects/Account/fields/Group_Owned_Customer__c.field-meta.xml
<CustomField>
    <fullName>Group_Owned_Customer__c</fullName>
    <inlineHelpText>Y=Owned by the customer group head office, N=owned by franchisee or single separate individual</inlineHelpText>
    <label>Group Owned Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_no</valueSetName>
    </valueSet>
</CustomField>