force-app/main/default/objects/Account/fields/Invoice_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Name__c</fullName>
    <label>Invoice Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>