force-app/main/default/objects/Account/fields/Invoice_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Address__c</fullName>
    <description>the email address invoices are sent to</description>
    <inlineHelpText>the email address invoices are sent to</inlineHelpText>
    <label>Invoice Email Address</label>
    <type>Email</type>
</CustomField>