force-app/main/default/objects/Account/fields/Invoice_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_CC__c</fullName>
    <description>the email address in the cc field that invoice are sent to</description>
    <inlineHelpText>the email address in the cc field that invoice are sent to</inlineHelpText>
    <label>Invoice Email CC</label>
    <type>Email</type>
</CustomField>