force-app/main/default/objects/Account/fields/Invoice_Emails__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Emails__c</fullName>
    <inlineHelpText>Yes/No if invoices are emailed.</inlineHelpText>
    <label>Invoice Emails?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_no</valueSetName>
    </valueSet>
</CustomField>