force-app/main/default/objects/Account/fields/Last_Period_Balance__c.field-meta.xml
<CustomField>
    <fullName>Last_Period_Balance__c</fullName>
    <inlineHelpText>The account balance at the end of our financial month</inlineHelpText>
    <label>Last Period Balance</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>