force-app/main/default/objects/Account/fields/Last_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Receipt_Date__c</fullName>
    <inlineHelpText>The date a payment was last made against the account.</inlineHelpText>
    <label>Last Receipt Date</label>
    <type>Date</type>
</CustomField>