force-app/main/default/objects/Account/fields/Last_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sale_Date__c</fullName>
    <inlineHelpText>The date of the last order/invoice.</inlineHelpText>
    <label>Last Sale Date</label>
    <type>Date</type>
</CustomField>