force-app/main/default/objects/Account/fields/Last_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Date__c</fullName>
    <inlineHelpText>The date of the last statement.</inlineHelpText>
    <label>Last Statement Date</label>
    <type>Date</type>
</CustomField>