force-app/main/default/objects/Account/fields/Lead_Time_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_In_Days__c</fullName>
    <description>Used for default order creation batch.</description>
    <label>Lead Time(In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>