force-app/main/default/objects/Account/fields/Memo_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Memo_Amount_Due__c</fullName>
    <inlineHelpText>The amount due that has not yet been posted to this period.</inlineHelpText>
    <label>Memo Amount Due</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>