force-app/main/default/objects/Account/fields/Not_Yet_Due__c.field-meta.xml
<CustomField>
    <fullName>Not_Yet_Due__c</fullName>
    <inlineHelpText>The amount that has not yet due because of terms.</inlineHelpText>
    <label>Not Yet Due</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>