force-app/main/default/objects/Account/fields/Online_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Online_Discount_Amount__c</fullName>
    <description>This is a percentage value of discount applied to the order if online payment is done.</description>
    <inlineHelpText>This is a percentage discount applied to the order if online payment is done.</inlineHelpText>
    <label>Online Discount Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>