force-app/main/default/objects/Account/fields/Online_Payment_Discount__c.field-meta.xml
<CustomField>
    <fullName>Online_Payment_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, the the customer will be given a discount when online payment is done.</description>
    <inlineHelpText>If this is checked, the the customer will be given a discount when online payment is done.</inlineHelpText>
    <label>Online Payment Discount</label>
    <type>Checkbox</type>
</CustomField>