force-app/main/default/objects/Account/fields/Overdue_1_Period__c.field-meta.xml
<CustomField>
    <fullName>Overdue_1_Period__c</fullName>
    <inlineHelpText>The amount that is overdue by 1 financial months.</inlineHelpText>
    <label>Overdue 1 Period</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>