force-app/main/default/objects/Account/fields/Overdue_3_Period__c.field-meta.xml
<CustomField>
    <fullName>Overdue_3_Period__c</fullName>
    <inlineHelpText>The amount that is overdue by 3 or more financial months.</inlineHelpText>
    <label>Overdue 3 Period</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>