force-app/main/default/objects/Account/fields/Principal_National_Grower_s_Number__c.field-meta.xml
<CustomField>
    <fullName>Principal_National_Grower_s_Number__c</fullName>
    <description>Text field to house the Principal National Grower&apos;s Number of the Farm</description>
    <label>Principal National Grower&apos;s Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>