force-app/main/default/objects/Account/fields/Product_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Product_Preferences__c</fullName>
    <label>Product Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Preference</valueSetName>
    </valueSet>
</CustomField>