force-app/main/default/objects/Account/fields/Purchase_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Required__c</fullName>
    <inlineHelpText>If Y, then a purchase order must be supplied with the order, If N, a purchase order is not required, but may still be supplied.</inlineHelpText>
    <label>Purchase Order Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_no</valueSetName>
    </valueSet>
</CustomField>