force-app/main/default/objects/Account/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <inlineHelpText>Will the customer call to place orders or would they like to be contacted.</inlineHelpText>
    <label>Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Level</valueSetName>
    </valueSet>
</CustomField>