force-app/main/default/objects/Account/fields/Statement_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Statement_Contact_Name__c</fullName>
    <description>the contact name for statements</description>
    <inlineHelpText>the contact name for statements</inlineHelpText>
    <label>Statement Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>