force-app/main/default/objects/Account/fields/Statement_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Statement_Email_Address__c</fullName>
    <description>the email address statements are sent to</description>
    <inlineHelpText>the email address statements are sent to</inlineHelpText>
    <label>Statement Email Address</label>
    <type>Email</type>
</CustomField>