force-app/main/default/objects/Account/fields/Statement_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>Statement_Email_CC__c</fullName>
    <description>the email address in the cc field that statements are sent</description>
    <inlineHelpText>the email address in the cc field that statements are sent</inlineHelpText>
    <label>Statement Email CC</label>
    <type>Email</type>
</CustomField>